Business logic almost complete, but need to review