@@ -1,15 +1,18 @@
 package revenue.example.revenue.services;
 
+import java.time.LocalDate;
+import java.util.Calendar;
+import java.util.Date;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.stereotype.Service;
 
-import javassist.NotFoundException;
 import lombok.AllArgsConstructor;
 import revenue.example.revenue.dto.ExpenseDTO;
 import revenue.example.revenue.enums.CategoryExpense;
@@ -22,14 +25,57 @@ import revenue.example.revenue.repository.ExpenseRepository;
 public class ExpenseService {
     private ExpenseRepository expenseRepository;
     private IExpenseAdapter expenseAdapter;
-    private ExpenseTotalService expenseTotalService;
+
+    public List<ExpenseDTO> getAllExpenses() {
+        return expenseRepository.findAll().stream()
+                .map(expenseAdapter::expenseToDTO)
+                .collect(Collectors.toList());
+    }
 
     @CacheEvict(value = "expenses", allEntries = true)
     public ExpenseDTO createExpense(ExpenseDTO expenseDTO) {
         Expense expense = expenseAdapter.dtoToExpense(expenseDTO);
         expense.setSlug(expense.getSlug() + " " + UUID.randomUUID());
 
-        expenseTotalService.incrementTotal(expenseDTO.dataCriacao(), expense.getValue());
+        String parcelaCommumId = UUID.randomUUID().toString();
+        Double totalCompra = 0d;
+	Integer quantidadeDeParcela = 0;
+	if(expense.getParcela() != null){
+         quantidadeDeParcela = expense.getParcela().getQuantidadeDeParcela();
+	 totalCompra = (expense.getValue() * expense.getParcela().getQuantidadeDeParcela());
+
+	}
+        LocalDate dataCriacaoParcela = expense.getPaymentDay();
+        LocalDate vencimento = expense.getPaymentDay().plusMonths(quantidadeDeParcela);
+
+        if (expense.getParcela() != null) {
+
+            for (int i = 0; i < expense.getParcela().getQuantidadeDeParcela(); i++) {
+                Expense expenseParcelado = Expense.builder()
+                        .category(expense.getCategory())
+                        .paymentDay(expense.getPaymentDay().plusMonths((i + 1)))
+                        .description(expense.getDescription())
+                        .nome(expense.getNome() + " " + (i + 1))
+                        .grove(expense.getGrove())
+                        .parcela(expense.getParcela())
+                        .value(expense.getValue())
+                        .slug(expense.getSlug() + " " + UUID.randomUUID())
+                        .build();
+
+                expenseParcelado.getParcela().setDataCriacaoParcela(dataCriacaoParcela);
+                expenseParcelado.getParcela().setDataVencimento(vencimento);
+
+                expenseParcelado.getParcela().setIdParcela(parcelaCommumId);
+                expenseParcelado.getParcela().setTotalCompra(totalCompra);
+                expense.getParcela().setNumberParcela((i + 1));
+
+                expenseRepository.save(expenseParcelado);
+            }
+
+            return expenseAdapter.expenseToDTO(
+                    expense);
+
+        }
 
         return expenseAdapter.expenseToDTO(
                 expenseRepository.save(expense));
@@ -42,8 +88,6 @@ public class ExpenseService {
         if (!expense.isPresent()) {
             throw new RuntimeException("Expense not found");
         }
-
-        expenseTotalService.updateTotal(expenseDTO.dataCriacao(), expenseDTO.value(), expense.get().getValue());
 
         if (expenseDTO.nome() != null) {
             expense.get().setNome(expenseDTO.nome());
@@ -75,27 +119,60 @@ public class ExpenseService {
                 .collect(Collectors.toList());
     }
 
-    public List<ExpenseDTO> getAllByYearAndMonth(int year, int month) {
-        return null;
+    public ExpenseDTO getExpenseBySlug(String slug) {
+
+        return expenseAdapter.expenseToDTO(expenseRepository.findBySlug(slug));
+
+    }
+    
+    public List<ExpenseDTO> getExpenseByParcelaId(String parcelaId) {
+        return expenseRepository.findByParcelaId(parcelaId)
+               .stream()
+               .map(expenseAdapter::expenseToDTO)
+               .collect(Collectors.toList());
     }
 
-    public List<ExpenseDTO> getAllByCategory(CategoryExpense category) {
-        return expenseRepository.getExpensesByCategory(
-                category)   
+    public List<ExpenseDTO> getAllByYearAndMonth(Integer year, Integer month) {
+        Calendar calendar = Calendar.getInstance();
+
+        // Data de início do mês
+        calendar.set(year, month - 1, 1, 0, 0, 0);
+        calendar.set(Calendar.MILLISECOND, 0);
+        Date init = calendar.getTime();
+
+        // Data de fim (primeiro dia do próximo mês)
+        calendar.set(year, month, 1, 0, 0, 0);
+        Date finall = calendar.getTime();
+
+        return expenseRepository.findByMonthAndYear(init, finall)
+                .stream().map(expenseAdapter::expenseToDTO).collect(Collectors.toList());
+    }
+
+    public List<ExpenseDTO> findByCategoryAndYearAndMonth(CategoryExpense category, Integer year, Integer month) {
+        return this.getAllByYearAndMonth(year, month)
                 .stream()
-                .map(expenseAdapter::expenseToDTO)
-                .collect(Collectors.toList());
+                .filter(expense -> expense.category().equals(category)).toList();
     }
 
     @CacheEvict(value = "expenses", key = "#id")
-    public void deleteExpense(String id) {  
+    public void deleteExpense(String id) {
         Optional<Expense> expense = expenseRepository.findById(id);
         if (!expense.isPresent()) {
             throw new NoSuchElementException();
 
         }
-        expenseTotalService.incrementTotal(expense.get().getDataCriacao(), expense.get().getValue() * -1);
         expenseRepository.deleteById(id);
 
+    }
+
+    @CacheEvict(value = "expenses", key = "#idInstallment")
+    public void deleteInstallment(String idInstallment) {
+        List<Expense> expenses = expenseRepository.findByParcelaId(idInstallment);
+        if (expenses.isEmpty()) {
+            throw new NoSuchElementException();
+        }
+        
+        expenseRepository.deleteByParcelaId(idInstallment);
+        
     }
 }
